tools/php-ffmpeg-ext/ffmpeg/tests/getAudioCodec.out
Fatal error: Class 'ffmpeg_movie' not found in /var/www/html/dandan/tools/php-ffmpeg-ext/ffmpeg/tests/getAudioCodec.php on line 2